# fluxo

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  bacon.toml  cliff.toml  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
docs/: Architecture.MD  VISION.md
examples/: fluxo.toml
fluxo-bin/: Cargo.toml
fluxo-bin/src/: main.rs
fluxo-core/: Cargo.toml
fluxo-core/benches/: hot_path.rs
fluxo-core/src/: app.rs  context.rs  error.rs  lib.rs  proxy.rs  proxy_protocol.rs
fluxo-core/src/admin/: handlers.rs  mod.rs  server.rs
fluxo-core/src/cache/: disk.rs  lock.rs  mod.rs  tinyufo.rs
fluxo-core/src/config/: defaults.rs  docker_provider.rs  file_provider.rs  kubernetes_provider.rs  kv_provider.rs  lint.rs  mod.rs  provider.rs  types.rs  watcher.rs
fluxo-core/src/l4/: config.rs  fastcgi.rs  mail_proxy.rs  mod.rs  proxy.rs  udp_proxy.rs
fluxo-core/src/observability/: access_log.rs  metrics.rs  mod.rs  otlp.rs  push.rs  syslog.rs  tracing.rs  webhook.rs
fluxo-core/src/plugins/: add_prefix.rs  bandwidth_limit.rs  basic_auth.rs  body_filter.rs  compression.rs  concurrency_limit.rs  config.rs  cors.rs  csrf.rs  digest_auth.rs  forward_auth.rs  headers.rs  ip_restrict.rs  jwt_auth.rs  key_auth.rs  ldap_auth.rs  mod.rs  oauth2.rs  path_rewrite.rs  pipeline.rs  rate_limit.rs  redirect.rs  referer_restrict.rs  request_buffer.rs  request_id.rs  security_headers.rs  static_files.rs  static_response.rs  strip_prefix.rs  sub_filter.rs  traffic_split.rs  ua_restrict.rs  waf.rs
fluxo-core/src/routing/: geoip.rs  matcher.rs  mod.rs
fluxo-core/src/tls/: acme.rs  challenge.rs  ct.rs  dns_provider.rs  mod.rs  mtls.rs  ocsp.rs  renewal.rs  sni.rs  store.rs
fluxo-core/src/upstream/: circuit_breaker.rs  dns.rs  edf.rs  least_conn.rs  mod.rs  peer.rs
fluxo-core/tests/: e2e_basic_auth.rs  e2e_cache.rs  e2e_circuit_breaker.rs  e2e_cors.rs  e2e_error_pages.rs  e2e_headers.rs  e2e_path_rewrite.rs  e2e_proxy.rs  e2e_request_id.rs  e2e_security_headers.rs  e2e_websocket.rs  e2e_weighted_lb.rs
fluxo-core/tests/helpers/: mod.rs
fluxo-plugin-sdk/: Cargo.toml
fluxo-plugin-sdk/include/: fluxo_plugin.h
fluxo-plugin-sdk/src/: lib.rs
fluxo-plugins/: Cargo.toml
fluxo-plugins/src/: lib.rs
