[workspace]
resolver = "2"
members = ["fluxo-bin", "fluxo-core", "fluxo-plugins", "fluxo-plugin-sdk"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
pingora = { version = "0.8", features = ["proxy", "lb"] }
pingora-proxy = "0.8"
pingora-core = "0.8"
pingora-load-balancing = "0.8"
pingora-http = "0.8"
pingora-cache = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"
arc-swap = "1.9.0"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
glob = "0.3"
fastrand = "2"
async-trait = "0.1"
http = "1"
instant-acme = "0.8"
rcgen = "0.14"
x509-parser = "0.18"
pem = "3"
tokio = { version = "1", features = ["fs", "time", "sync", "rt-multi-thread"] }
tempfile = "3"
bytes = "1"
prometheus = "0.14.0"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
http-body-util = "0.1"
ipnet = "2"
governor = "0.10"
dashmap = "6"
moka = { version = "0.12", features = ["sync"] }
flate2 = "1"
brotli = "8"
zstd = "0.13"
base64 = "0.22"
sha2 = "0.10"
md-5 = "0.10"
parking_lot = "0.12"
ppp = "2"
percent-encoding = "2"
memchr = "2"
maxminddb = "0.24"
hickory-resolver = "0.25"
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic", "http-proto"] }
tracing-opentelemetry = "0.30"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
criterion = { version = "0.5", features = ["html_reports"] }
TinyUFO = "0.8"

[workspace.lints.clippy]
# Enable strict groups
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Explicitly ban panics
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# Allow specific noisy rules
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
similar_names = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
unreadable_literal = "allow"
default_trait_access = "allow"
doc_link_with_quotes = "allow"
format_push_string = "allow"
significant_drop_tightening = "allow"
