[package]
name = "fluxo"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "fluxo"
path = "src/main.rs"

[features]
default = ["boringssl"]
boringssl = ["fluxo-core/boringssl", "pingora/boringssl"]
rustls = ["fluxo-core/rustls", "pingora/rustls"]

[dependencies]
fluxo-core = { path = "../fluxo-core", default-features = false }
pingora = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
