[package]
name = "fluxo-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = ["boringssl"]
boringssl = ["pingora/boringssl"]
rustls = ["pingora/rustls"]

[dependencies]
pingora = { workspace = true }
pingora-proxy = { workspace = true }
pingora-core = { workspace = true }
pingora-load-balancing = { workspace = true }
pingora-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
arc-swap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
fastrand = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
instant-acme = { workspace = true }
rcgen = { workspace = true }
x509-parser = { workspace = true }
pem = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
prometheus = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
