[package]
name = "fluxo-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["boringssl"]
boringssl = ["pingora/boringssl"]
rustls = ["pingora/rustls"]

[dependencies]
pingora = { workspace = true }
pingora-proxy = { workspace = true }
pingora-core = { workspace = true }
pingora-load-balancing = { workspace = true }
pingora-http = { workspace = true }
pingora-cache = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
arc-swap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
fastrand = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
instant-acme = { workspace = true }
rcgen = { workspace = true }
x509-parser = { workspace = true }
pem = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
prometheus = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
ipnet = { workspace = true }
governor = { workspace = true }
dashmap = { workspace = true }
moka = { workspace = true }
flate2 = { workspace = true }
brotli = { workspace = true }
zstd = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
parking_lot = { workspace = true }
ppp = { workspace = true }
percent-encoding = { workspace = true }
memchr = { workspace = true }
maxminddb = { workspace = true }
hickory-resolver = { workspace = true }

[dev-dependencies]
axum = { version = "0.8.8", features = ["ws"] }
reqwest = { version = "0.13.2", features = ["json", "rustls", "brotli", "gzip", "deflate"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
tempfile = { workspace = true }

# All E2E tests use harness = false so std::process::exit(0) runs after tests,
# preventing Pingora's run_forever() threads from keeping the process alive.
[[test]]
name = "e2e_proxy"
harness = false

[[test]]
name = "e2e_basic_auth"
harness = false

[[test]]
name = "e2e_security_headers"
harness = false

[[test]]
name = "e2e_request_id"
harness = false

[[test]]
name = "e2e_headers"
harness = false

[[test]]
name = "e2e_path_rewrite"
harness = false

[[test]]
name = "e2e_cors"
harness = false

[[test]]
name = "e2e_cache"
harness = false

[[test]]
name = "e2e_circuit_breaker"
harness = false

[[test]]
name = "e2e_weighted_lb"
harness = false

[[test]]
name = "e2e_error_pages"
harness = false

[[test]]
name = "e2e_websocket"
harness = false
